Removing file type .html from nav

--- a/customPrints.html
+++ b/customPrints.html
@@ -43,9 +43,9 @@
             id="navbarNavAltMarkup"
           >
             <div class="navbar-nav">
-              <a class="nav-link active" href="./customPrints.html">Custom Prints</a>
-              <a class="nav-link" href="./rentPrinter.html">Rent a Printer</a>
-              <a class="nav-link" href="./contactus.html">Contact Us</a>
+              <a class="nav-link active" href="./customPrints">Custom Prints</a>
+              <a class="nav-link" href="./rentPrinter">Rent a Printer</a>
+              <a class="nav-link" href="./contactus">Contact Us</a>
               <a href="#"></a>
             </div>
           </div>
