--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ParadigmPrints</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="" />
+    <title>Paradigm Prints</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,60 +14,14 @@
   </head>
   <body class="d-flex flex-column min-vh-100 mb-0">
     <div class="flex-grow-1">
-    <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand h1" href="./">
-            <img
-              src="assets/PPLogo.JPEG"
-              alt="Logo"
-              width="30"
-              height="30"
-              class="d-inline-block align-text-top"
-            />
-            Paradigm Prints
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse flex-row-reverse"
-            id="navbarNavAltMarkup"
-          >
-            <div class="navbar-nav">
-              <a class="nav-link" href="./customPrints">Custom Prints</a>
-              <a class="nav-link" href="./rentPrinter">Rent a Printer</a>
-              <a class="nav-link" href="./contactus">Contact Us</a>
-              <a href="#"></a>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <h1 class="text-center">HOME</h1>
+    <main-navbar></main-navbar>
+    <div>
+      <div id="content"></div>
     </div>
-
-    <!-- Footer -->
-    <section class="footer text-center">
-      <p>
-        Paradigm Prints &copy;
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-      </p>
-    </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script src="main.js"></script>
+    </div>
+    <main-footer></main-footer>
+    <script src="/components/navbar.js"></script>
+    <script src="/components/footer.js"></script>
+    <script src="/js/router.js"></script>
   </body>
 </html>
