Added theme and started home page. Disabled other routes

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,13 @@
-<h1 class="text-center">HOME</h1>
+<div
+  class="container-fluid title-container d-flex flex-column justify-content-center text-center"
+>
+  <h5 class="title-1">Unleash your creativity with</h5>
+  <h1 class="title-2">PARADIGM PRINTS</h1>
+</div>
+<div
+  class="container-fluid statement-container d-flex align-items-center justify-content-center"
+>
+  <h3 class="statement">
+    Revolutionizing 3D printing for students by students!
+  </h3>
+</div>
