--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="d-flex flex-column min-vh-100 mb-0">
+  <body class="d-flex flex-column min-vh-100">
     <div class="flex-grow-1">
-    <main-navbar></main-navbar>
-    <div>
+      <main-navbar></main-navbar>
       <div id="content"></div>
     </div>
-    </div>
     <main-footer></main-footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="/components/navbar.js"></script>
     <script src="/components/footer.js"></script>
     <script src="/js/router.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
