--- a/pages/custom-prints.html
+++ b/pages/custom-prints.html
@@ -1,10 +1,10 @@
 <h1 class="text-center">CUSTOM PRINTS</h1>
-      <h6 class="text-center mb-4">
-        Please fill out the following form to request custom prints.
-      </h6>
+<h6 class="text-center mb-4">
+  Please fill out the following form to request custom prints.
+</h6>
 
-      <div class="container-fluid">
-        <!-- <form
+<div class="container-fluid">
+  <!-- <form
           action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfBWf6dcG49A937pfzTMrTAgxzMSiVRAWqulhPC_gAeNWywPw/formResponse"
         >
           <div class="mb-3">
@@ -203,25 +203,21 @@
             <button type="submit" class="btn btn-primary px-5">Submit</button>
           </div>
         </form> -->
-        <!-- <form> -->
-        <div class="mb-3">
-          <label for="formFileMultiple" class="form-label">STL Files</label>
-          <input
-            class="form-control"
-            type="file"
-            id="formFileMultiple"
-            multiple
-            onchange="getFile(event)"
-          />
-        </div>
-        <div class="d-flex justify-content-center">
-          <button
-            type="submit"
-            class="btn btn-primary px-5"
-            onclick="uploadFile()"
-          >
-            Submit
-          </button>
-        </div>
-        <!-- </form> -->
-      </div>
+  <!-- <form> -->
+  <div class="mb-3">
+    <label for="formFileMultiple" class="form-label">STL Files</label>
+    <input
+      class="form-control"
+      type="file"
+      id="formFileMultiple"
+      multiple
+      onchange="getFile(event)"
+    />
+  </div>
+  <div class="d-flex justify-content-center">
+    <button type="submit" class="btn btn-primary px-5" onclick="uploadFile()">
+      Submit
+    </button>
+  </div>
+  <!-- </form> -->
+</div>
