Added more animation and logo with color scheme. Started more home sections but did not complete them

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     ></script>
     <script src="/components/navbar.js"></script>
     <script src="/components/footer.js"></script>
+    <script src="/components/employee_card.js"></script>
     <script src="/js/router.js"></script>
     <script src="/js/main.js"></script>
   </body>
