--- a/pages/home.html
+++ b/pages/home.html
@@ -1,13 +1,48 @@
 <div
-  class="container-fluid title-container d-flex flex-column justify-content-center text-center"
+  class="container-fluid title-container d-flex flex-column justify-content-center align-items-center text-center"
 >
   <h5 class="title-1">Unleash your creativity with</h5>
-  <h1 class="title-2">PARADIGM PRINTS</h1>
+  <h1 class="title-2 bounce-in">PARADIGM PRINTS</h1>
+  <img src="assets\logo.jpeg" alt="" />
 </div>
-<div
-  class="container-fluid statement-container d-flex align-items-center justify-content-center"
+<!-- <div
+  class="container-fluid services-container d-flex flex-column align-items-center"
 >
-  <h3 class="statement">
-    Revolutionizing 3D printing for students by students!
-  </h3>
-</div>
+  <h1 class="title text-center">SERVICES</h1>
+  <div class="flex-grow-1">
+    <div class="services-card">
+      <div class="services-text">CUSTOM PRINTS</div>
+      <div class="services-subtext">
+        Our team is excited to turn your 3D designs into reality! Simply share
+        your STL files with us, and we'll bring your vision to life with
+        precision and expertise
+      </div>
+    </div>
+    <div class="services-card">
+      <div class="services-text">PRINTER RENTALS</div>
+      <div class="services-img">
+        "DIY lovers, we've got you covered! Rent our 3D printers for convenient,
+        hassle-free project printing. Ideal for students and professionals
+        looking to bring their ideas to life on their own terms."
+      </div>
+    </div>
+  </div>
+</div> -->
+<!-- <div class="container-fluid statement-container">
+  <div class="row">
+    <h3 class="statement">
+      Revolutionizing 3D printing for students by students!
+    </h3>
+  </div>
+  <div class="row">
+    <div class="col">
+      <main-employeecard></main-employeecard>
+    </div>
+    <div class="col">
+      <main-employeecard></main-employeecard>
+    </div>
+    <div class="col">
+      <main-employeecard></main-employeecard>
+    </div>
+  </div>
+</div> -->
