--- a/pages/404.html
+++ b/pages/404.html
@@ -1,1 +1,6 @@
-<h1 class="text-center">404</h1>
+<div
+  class="container-fluid title-container d-flex flex-column justify-content-center align-items-center text-center"
+>
+  <h1 class="title-1">404</h1>
+  <p>Page Not Found. Coming soon!</p>
+</div>
