Fixed home page responsiveness. Still need to fix ultrawide screen responsiveness

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 >
   <h5 class="title-1">Unleash your creativity with</h5>
   <h1 class="title-2 bounce-in">PARADIGM PRINTS</h1>
-  <img src="assets\logo.jpeg" alt="" />
+  <img class= "home-logo mt-4" src="assets\logo.jpeg" alt="" />
 </div>
 <!-- <div
   class="container-fluid services-container d-flex flex-column align-items-center"
