Added services section

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,48 +1,57 @@
+<!-- HOME PAGE -->
 <div
   class="container-fluid title-container d-flex flex-column justify-content-center align-items-center text-center"
 >
   <h5 class="title-1">Unleash your creativity with</h5>
   <h1 class="title-2 bounce-in">PARADIGM PRINTS</h1>
-  <img class= "home-logo mt-4" src="assets\logo.jpeg" alt="" />
+  <img class="home-logo mt-4" src="assets\logo.jpeg" alt="" />
 </div>
-<!-- <div
-  class="container-fluid services-container d-flex flex-column align-items-center"
->
-  <h1 class="title text-center">SERVICES</h1>
-  <div class="flex-grow-1">
-    <div class="services-card">
-      <div class="services-text">CUSTOM PRINTS</div>
-      <div class="services-subtext">
-        Our team is excited to turn your 3D designs into reality! Simply share
-        your STL files with us, and we'll bring your vision to life with
-        precision and expertise
+<!-- SERVICES SECTION -->
+<div class="container-fluid services-container">
+  <div class="text-center">
+    <h1 class="services-title">SERVICES</h1>
+  </div>
+  <div>
+    <div class="row">
+      <div class="services-card col-lg-6">
+        <h3 class="services-card-header text-center">
+          <i class="fa-solid fa-cubes fa-xl"></i> CUSTOM PRINTS
+        </h3>
+        <h5 class="services-card-subheader text-center">
+          Our team is excited to turn your 3D designs into reality!
+        </h5>
+        <p class="services-card-p">
+          Ready to bring your vision to life? Click the button below to access
+          the form and share your STL files with us. Our team will handle the
+          rest with precision and expertise. Please ensure you are signed in to
+          a Google account to proceed.
+        </p>
+        <div class="text-center">
+          <a class="btn btn-outline-info" href="https://forms.gle/CH7zee485X8UWkDk6" target="_blank">
+            Request Quote
+          </a>
+        </div>
+      </div>
+      <div class="services-card col-lg-6">
+        <h3 class="services-card-header text-center">
+          <i class="fa-solid fa-print fa-xl"></i> PRINTER RENTALS
+        </h3>
+        <h5 class="services-card-subheader text-center">
+          DIY lovers, we've got you covered! Rent our 3D printers for
+          convenient, hassle-free project printing. Ideal for students and
+          professionals looking to bring their ideas to life on their own terms.
+        </h5>
+        <p class="services-card-p">
+          Ready to kickstart your 3D printing journey? Click the button below to
+          access the form. Whether you're a student or a professional, our team
+          is here to assist you every step of the way.
+        </p>
+        <div class="text-center">
+          <a type="button" class="btn btn-outline-info" href="https://forms.gle/wi5GEnRqt2HKVDJT6" target="_blank">
+            Request Quote
+          </a>
+        </div>
       </div>
     </div>
-    <div class="services-card">
-      <div class="services-text">PRINTER RENTALS</div>
-      <div class="services-img">
-        "DIY lovers, we've got you covered! Rent our 3D printers for convenient,
-        hassle-free project printing. Ideal for students and professionals
-        looking to bring their ideas to life on their own terms."
-      </div>
-    </div>
   </div>
-</div> -->
-<!-- <div class="container-fluid statement-container">
-  <div class="row">
-    <h3 class="statement">
-      Revolutionizing 3D printing for students by students!
-    </h3>
-  </div>
-  <div class="row">
-    <div class="col">
-      <main-employeecard></main-employeecard>
-    </div>
-    <div class="col">
-      <main-employeecard></main-employeecard>
-    </div>
-    <div class="col">
-      <main-employeecard></main-employeecard>
-    </div>
-  </div>
-</div> -->
+</div>
