Fixed services question and p text

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,12 +20,13 @@
         <h5 class="services-card-subheader text-center">
           Our team is excited to turn your 3D designs into reality!
         </h5>
-        <p class="services-card-p">
-          Ready to bring your vision to life? Click the button below to access
+        <p class="services-card-p text-center q">
+          Ready to bring your vision to life? 
+        </p>
+        <p class="services-card-p text-center">Click the button below to access
           the form and share your STL files with us. Our team will handle the
           rest with precision and expertise. Please ensure you are signed in to
-          a Google account to proceed.
-        </p>
+          a Google account to proceed.</p>
         <div class="text-center">
           <a class="btn btn-outline-info" href="https://forms.gle/CH7zee485X8UWkDk6" target="_blank">
             Request Quote
@@ -38,11 +39,13 @@
         </h3>
         <h5 class="services-card-subheader text-center">
           DIY lovers, we've got you covered! Rent our 3D printers for
-          convenient, hassle-free project printing. Ideal for students and
-          professionals looking to bring their ideas to life on their own terms.
+          convenient, hassle-free project printing.
         </h5>
-        <p class="services-card-p">
-          Ready to kickstart your 3D printing journey? Click the button below to
+        <p class="services-card-p text-center q">
+          Ready to kickstart your 3D printing journey?
+        </p>
+        <p class="services-card-p text-center">
+           Click the button below to
           access the form. Whether you're a student or a professional, our team
           is here to assist you every step of the way.
         </p>
