Added logo and fixed values section

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,6 @@
 <div id="about" class="container-fluid about-container">
   <div class="row">
     <div class="col-md-8 d-flex align-items-center justify-content-center">
-      <!-- Centered text content -->
       <div>
         <h1 class="viga-font">About Us</h1> <br>
         <h3>Welcome to Paradigm Prints, where innovation meets precision in the world of 3D printing. </h3>
@@ -21,24 +20,25 @@
       </div>
     </div>
     <div class="col-md-4 d-flex align-items-center justify-content-center">
-      <!-- Centered image -->
       <img class="logo" src="assets\logo_svg-cropped.svg" alt=""/>
     </div>
   </div>
 </div>
 
-<div class="container-fluid values-container">
+<div id="about" class="container-fluid values-container">
   <div class="row">
     <div class="col-md-4 d-flex align-items-center justify-content-center">
-      <img class="globe-icon" src="assets\earth-outline.svg" alt="" />
+      <img class="logo" src="assets\earth-outline.svg" alt=""/>
     </div>
-    <div class="col-md-8 d-flex flex-column d-flex align-items-center justify-content-center">
-      <h1 class="viga-font">Our Values</h1><br>
-      <h3><strong>MISSION:</strong> Our mission is to effortlessly bring ideas to life through 3D printing.</h3><br>
-      <h3><strong>VISION:</strong> We see a world where individuals of all ages and backgrounds not only embrace the wonders of 3D printing but also possess the skills and knowledge to navigate its complexities with ease.</h3>
-      <br>
-      <br>
-      <h3>Join us on this journey as we work tirelessly to make 3D printing an indispensable tool, sparking the flames of curiosity in every household and ushering in a paradigm shift in how we perceive and interact with the world.</h3>
+    <div class="col-md-8 d-flex align-items-center justify-content-center">
+      <div>
+        <h1 class="viga-font">Our Values</h1> <br>
+        <h3><strong>MISSION:</strong> Our mission is to effortlessly bring ideas to life through 3D printing.</h3><br>
+        <h3><strong>VISION:</strong> We see a world where individuals of all ages and backgrounds not only embrace the wonders of 3D printing but also possess the skills and knowledge to navigate its complexities with ease.</h3>
+        <br>
+        <br>
+        <h3>Join us on this journey as we work tirelessly to make 3D printing an indispensable tool, sparking the flames of curiosity in every household and ushering in a paradigm shift in how we perceive and interact with the world.</h3>
+      </div>
     </div>
   </div>
 </div>
