--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <title>Paradigm Prints</title>
+    <link rel="icon" href="assets\logo_svg-cropped.svg" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,5 +29,9 @@
     <script src="/components/footer.js"></script>
     <script src="/js/router.js"></script>
     <script src="/js/main.js"></script>
-    <script src="https://kit.fontawesome.com/d864e6efec.js" crossorigin="anonymous"></script>  </body>
+    <script
+      src="https://kit.fontawesome.com/d864e6efec.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
