--- a/pages/home.html
+++ b/pages/home.html
@@ -70,8 +70,8 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-6 services-card">
+  <div class="row d-flex justify-content-center">
+    <!-- <div class="col-md-6 services-card">
       <div class="card">
         <img class="services-icon" src="assets\3d-printing-icon.png" alt="" />
         <h3>3D Printer Rentals</h3>
@@ -80,7 +80,7 @@
           Learn More
         </a>
       </div>
-    </div>
+    </div> -->
     <div class="col-md-6 services-card">
       <div class="card">
         <img class="services-icon" src="assets\online-training-icon.png" alt="" />
@@ -92,7 +92,7 @@
       </div>
     </div>
   </div>
-  <div class="row d-flex justify-content-center">
+  <!-- <div class="row d-flex justify-content-center">
     <div class="col-md-6 services-card">
       <div class="card">
         <img class="services-icon" src="assets\tools-icon.png" alt="" />
@@ -103,7 +103,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 
